--- a/public/src/tsconfig.json
+++ b/public/src/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
         "mapRoot": "ES6",
+        "sourceMap": true,
         "module": "CommonJS",
         "target": "ES6",
         "moduleResolution": "Node",
         "lib": ["dom", "ES6"],
+        "noEmitOnError": false,
     }
 }
