--- a/public/angular.json
+++ b/public/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-frontend",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap",
               "src/styles.css"
             ],
             "scripts": []
@@ -121,7 +123,7 @@
       }
     }
   },
-  "defaultProject": "angular-frontend",
+  "defaultProject": "MultiMulti Analyser",
   "cli": {
     "analytics": false
   }
